# Foxely

./: .gitignore  .gitmodules  .replit  CMakeLists.txt  Makefile  README.md  color.fox  compiler  compiler.grammar  composition.fox  core.foxely.11720.1606509839  core.foxely.21046.1606977611  core.foxely.23317.1606978011  core.foxely.23851.1606978068  core.foxely.24427.1606978143  core.foxely.24925.1606978186  core.foxely.25395.1606978229  core.foxely.25976.1606978297  core.foxely.26629.1606978380  core.foxely.27137.1606978421  core.foxely.27235.1605018901  core.foxely.27387.1605018913  core.foxely.28079.1605019001  core.foxely.28608.1605019051  core.foxely.49622.1604502356  core.foxely.50716.1604502560  dvd.sh  fib.fox  fib_v2.fox  file_test.fox  gen  hello  history.txt  lexer_number.fox  list.fox  main.c  main.cpp  packager  packager.fox  print.fox  (+2 more)
Foxely_Standard/: os.cpp
ProjectTest/: project.fox
asm/: asm.s  elfgen.cpp  hello.s  test_compiler.sh
compiler/: Makefile  ast.fox  main.cpp  main.fox  parser.fox  token.fox
compilerrrr/: main.fox  visitor.fox
examples/: CMakeLists.txt  Interface.fox  Makefile  c_setter.fox  call_from_c.fox  cat.fox  class_inherit.fox  class_operators.fox  condition.fox  error.fox  fib.fox  fiber.fox  file.fox  fox  function.fox  git_example.fox  hello.fox  history.txt  import_example.fox  increment.fox  is.fox  lambda.fox  lexer.fox  list.fox  main.cpp  map.fox  packager  setter.fox  sfml.fox  string.fox  tile.fox
foxely libraries/: filesystem.fox  list.fox  vector2.fox
include/: Benchmark.hpp  DynamicArray.hpp  FreeListAllocator.h  Map.hpp  NameUtils.hpp  Option.hpp  Parser.h  ParserHelper.h  Pool.hpp  Table.hpp  Utility.hpp  chunk.h  chunk.hpp  chunk_debug.h  common.h  compiler.h  custom_memory.h  debug.h  foxely.h  foxely.hpp  foxely_cpp.hpp  gc.hpp  gc_allocator.hpp  gc_details.h  gc_iterator.h  gc_pointer.h  linenoise.hpp  memory.hpp  native.h  object.h  object.hpp  scanner.h  statement.hpp  table.h  value.h  value.hpp  vm.h  vm.hpp
interpreter/: Makefile  (+22 more)
lib/GenericLexer/: .replit  CMakeLists.txt  Makefile  main.cpp
lib/GenericLexer/include/: CommutativeInserter.h  Lexer.h  Regex.h  Token.h  TokenInserter.h  TokenJoiner.h  TokenModifier.h  TokenScanner.h
lib/GenericLexer/src/: CommutativeInserter.cpp  Lexer.cpp  Token.cpp  TokenInserter.cpp  TokenModifier.cpp  TokenScanner.cpp
lib/GenericLexer/src/Lexer/: CommutativeInserter.cpp  Lexer.cpp  Regex.cpp  Token.cpp  TokenJoiner.cpp
lib/GenericLexer/tests/: RegexTest.cpp  TestDefine.cpp  TestParseAlphaNumber.cpp  TestParseGrammar.cpp
(+340 files in other folders)
